# markitdown_gui

./: .gitattributes  .gitignore  README.md  install-fedora.sh  install-ubuntu.sh  pyproject.toml  run.ps1  run.sh
backend/: anonymizer.py  compactor.py  main.py  ocr.py  pdf_markdown.py
deploy/: deploy.local.env.example  install-ionos-plesk.sh  markitdown.service  nginx-md.tudominio.es.conf  plesk-nginx-directives.conf  plesk-proxy-directives.conf
docs/: ejemplo-compactacion.md
docs/superpowers/plans/: 2026-06-05-compactacion-markdown.md
docs/superpowers/specs/: 2026-06-03-anonimizacion-pii-design.md  2026-06-03-token-estimate-design.md  2026-06-05-compactacion-markdown-design.md  2026-06-05-frontend-modularizacion-2026-design.md
frontend/: index.html
frontend/static/: script.js  styles.css
frontend/static/css/: base.css  layout.css  theme.css  utilities.css
frontend/static/css/components/: admonition.css  anonymize.css  buttons.css  files.css  formats.css  modal.css  overview.css  progress.css  results.css  toast.css  tokens.css  upload.css
frontend/static/js/: anonymize.js  api.js  conversion.js  files.js  main.js  results.js  state.js  toast.js  tokens.js  utils.js
tests/: test_anonymizer.py  test_api.py  test_compactor.py  test_ocr.py  test_pdf_markdown.py
