[project]
name = "markitdown-gui"
version = "0.1.0"
description = "GUI web para convertir múltiples formatos a Markdown usando MarkItDown"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "markitdown[all]==0.1.5",
    "python-multipart==0.0.6",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.2",
    "httpx>=0.27,<0.28",
    "black==23.12.1",
    "ruff==0.1.11",
]

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
