[project]
name = "markitdown-gui"
version = "0.1.0"
description = "GUI web para convertir múltiples formatos a Markdown usando MarkItDown"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Antonio Rueda", email = "antonio.rueda@gmail.com" }
]
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "markitdown[all]==0.1.5",
    "pytesseract>=0.3.10",
    "python-multipart==0.0.6",
    "python-dotenv>=1.0.1",
    "presidio-analyzer>=2.2,<3",
    "presidio-anonymizer>=2.2,<3",
    "spacy>=3.8,<3.9",
    "es-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/es_core_news_lg-3.8.0/es_core_news_lg-3.8.0-py3-none-any.whl",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.2",
    "httpx>=0.27,<0.28",
    "black==23.12.1",
    "ruff==0.1.11",
]

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
